--- a/Andoku/assets/about.html
+++ b/Andoku/assets/about.html
@@ -9,7 +9,7 @@
 
 <p>version 1.1.1</p>
 
-<p>Copyright &#x00a9; 2009  Markus Wiederkehr.</p>
+<p>Copyright &#x00a9; 2009, 2010  Markus Wiederkehr.</p>
 
 <p>This program comes with ABSOLUTELY NO WARRANTY. This is free software, and you are
 welcome to redistribute it under certain conditions; see the
