Included percent sudokus in help
git-svn-id: http://andoku.googlecode.com/svn/trunk@259 8b5035ae-46ba-11de-80ae-c1ff141340a0

--- a/Andoku/assets/help-de.html
+++ b/Andoku/assets/help-de.html
@@ -47,6 +47,8 @@ auferlegt. Es gibt drei Arten von Zusatzbereichen:</p>
   <dd>Das Sudoku hat vier Zusatzbereiche, die hellblau hinterlegt sind.
   Zusätzlich zu den Zeilen, Spalten und Blöcken müssen die Ziffern von 1 bis 9
   in jedem dieser Zusatzbereiche genau einmal auftreten.</dd>
+  <dt>Prozent-Sudoku</dt>
+  <dd>Das Sudoku hat drei Zusatzbereiche, die einem Prozent-Zeichen ähneln.</dd>
 </dl>
 
 <h1>Schwierigkeitsgrade</h1>
@@ -58,8 +60,8 @@ Zusatzbereich sind dabei generell schwieriger als Standard-Sudokus.</p>
 <p>Die Schwierigkeitsgrade <i>schwer</i> und <i>teuflisch</i> sollten schwierigere
 Sudoku-Rätsel beinhalten, als sie üblicherweise in Tageszeitungen abgedruckt sind.</p> 
 
-<p>Mit sechs verschiedenen Spielvarianten, fünf Schwierigkeitsgraden und jeweils
-100 Rätseln hat Andoku in Summe 3000 verschiedene Sudoku-Rätsel. </p>
+<p>Mit acht verschiedenen Spielvarianten, fünf Schwierigkeitsgraden und jeweils
+100 Rätseln hat Andoku in Summe 4000 verschiedene Sudoku-Rätsel. </p>
 
 <h1>Externe Links</h1>
 
