--- a/Andoku/assets/help.html
+++ b/Andoku/assets/help.html
@@ -44,6 +44,8 @@ kinds of extra regions:</p>
   <dd>The sudoku has four additional regions drawn in a light blue background color.
   In addition to rows, columns and blocks the digits 1 to 9 have to appear exactly
   once in each of these extra regions.</dd>
+  <dt>Percent-Sudoku</dt>
+  <dd>The sudoku has three additional regions that resemble a percent character.</dd>
 </dl>
 
 <h1>Difficulty Levels</h1>
@@ -55,8 +57,8 @@ are generally more difficult than standard sudokus.</p>
 <p>The difficulty levels <i>Hard</i> and <i>Fiendish</i> should contain harder puzzles
 than what can be found in newspapers.</p> 
 
-<p>With six different game types, five difficulty levels and 100 puzzles per type and
-difficulty Andoku offers a total of 3000 puzzles.</p>
+<p>With eight different game types, five difficulty levels and 100 puzzles per type and
+difficulty Andoku offers a total of 4000 puzzles.</p>
 
 <h1>External Links</h1>
 
