percent character -> percent sign
git-svn-id: http://andoku.googlecode.com/svn/trunk@260 8b5035ae-46ba-11de-80ae-c1ff141340a0

--- a/Andoku/assets/help.html
+++ b/Andoku/assets/help.html
@@ -45,7 +45,7 @@ kinds of extra regions:</p>
   In addition to rows, columns and blocks the digits 1 to 9 have to appear exactly
   once in each of these extra regions.</dd>
   <dt>Percent-Sudoku</dt>
-  <dd>The sudoku has three additional regions that resemble a percent character.</dd>
+  <dd>The sudoku has three additional regions that resemble a percent sign.</dd>
 </dl>
 
 <h1>Difficulty Levels</h1>
