--- a/Andoku/assets/help-de.html
+++ b/Andoku/assets/help-de.html
@@ -6,14 +6,23 @@
 </head>
 <body>
 
-<h1>Ziel des Spiels</h1>
+<h1>Inhaltsverzeichnis</h1>
+
+<ul>
+<li><a href="#objective">Ziel des Spiels</a></li>
+<li><a href="#variants">Spielvarianten</a></li>
+<li><a href="#difficulties">Schwierigkeitsgrade</a></li>
+<li><a href="#links">Externe Links</a></li>
+</ul>
+
+<h1 id="objective">Ziel des Spiels</h1>
 
 <p>Das Ziel des Spiels ist es, ein Raster so mit den Ziffern von 1 bis 9 zu befüllen, dass
 jede Ziffer exakt einmal in jedem <i>Bereich</i> vorkommt. Im Falle eines Standard-Sudokus
 ist ein <i>Bereich</i> dabei entweder eine Zeile, eine Spalte oder ein quadratischer
 3x3-Block.</p>
 
-<h1>Spielvarianten</h1>
+<h1 id="variants">Spielvarianten</h1>
 
 <p>Andoku bietet neben der klassischen Version zusätzliche Sudoku-Varianten an. 
 Im Menü <i>Neues Spiel</i> können Sie aus zwei Rasterarten und drei Arten von
@@ -51,7 +60,7 @@ auferlegt. Es gibt drei Arten von Zusatzbereichen:</p>
   <dd>Das Sudoku hat drei Zusatzbereiche, die einem Prozent-Zeichen ähneln.</dd>
 </dl>
 
-<h1>Schwierigkeitsgrade</h1>
+<h1 id="difficulties">Schwierigkeitsgrade</h1>
 
 <p>Andoku bietet fünf Schwierigkeitsgrade pro Spielvariante. Die Schwierigkeit bewegt
 sich von <i>einfach</i> bis <i>teuflisch</i>. Squiggly-Sudokus oder Sudokus mit
@@ -63,7 +72,7 @@ Sudoku-Rätsel beinhalten, als sie üblicherweise in Tageszeitungen abgedruckt s
 <p>Mit acht verschiedenen Spielvarianten, fünf Schwierigkeitsgraden und jeweils
 100 Rätseln hat Andoku in Summe 4000 verschiedene Sudoku-Rätsel. </p>
 
-<h1>Externe Links</h1>
+<h1 id="links">Externe Links</h1>
 
 <p>Andoku ist ein Open-Source-Projekt. Die Homepage des Projekts wird von
 <a href="http://code.google.com/p/andoku">Google Code</a> gehostet.</p>
