--- a/Andoku/assets/help.html
+++ b/Andoku/assets/help.html
@@ -5,13 +5,22 @@
 </head>
 <body>
 
-<h1>Objective</h1>
+<h1>Table of Contents</h1>
+
+<ul>
+<li><a href="#objective">Objective</a></li>
+<li><a href="#variants">Game Variants</a></li>
+<li><a href="#difficulties">Difficulty Levels</a></li>
+<li><a href="#links">External Links</a></li>
+</ul>
+
+<h1 id="objective">Objective</h1>
 
 <p>The objective of the game is to fill the entire game grid so that the digits from 1 to 9
 appear exactly once in each <i>region</i>. For a standard sudoku a <i>region</i> is either a
 row, a column or one of the nine square 3x3 block.</p>
 
-<h1>Game Variants</h1>
+<h1 id="variants">Game Variants</h1>
 
 <p>Andoku offers additional sudoku variants besides the classical one.
 In the <i>New Game</i> menu you can choose from two grid styles and three kinds
@@ -48,7 +57,7 @@ kinds of extra regions:</p>
   <dd>The sudoku has three additional regions that resemble a percent sign.</dd>
 </dl>
 
-<h1>Difficulty Levels</h1>
+<h1 id="difficulties">Difficulty Levels</h1>
 
 <p>Andoku offers five difficulty levels per game type. The difficulties range from
 <i>Easy</i> to <i>Fiendish</i>. Squiggly sudokus or sudokus with extra regions
@@ -60,7 +69,7 @@ than what can be found in newspapers.</p>
 <p>With eight different game types, five difficulty levels and 100 puzzles per type and
 difficulty Andoku offers a total of 4000 puzzles.</p>
 
-<h1>External Links</h1>
+<h1 id="links">External Links</h1>
 
 <p>Andoku is an open source project. The project's home page is hosted at
 <a href="http://code.google.com/p/andoku">Google Code</a>.</p>
