added more table of contents
git-svn-id: http://andoku.googlecode.com/svn/trunk@281 8b5035ae-46ba-11de-80ae-c1ff141340a0

--- a/Andoku/assets/help-de.html
+++ b/Andoku/assets/help-de.html
@@ -11,6 +11,10 @@
 <ul>
 <li><a href="#objective">Ziel des Spiels</a></li>
 <li><a href="#variants">Spielvarianten</a></li>
+	<ul>
+	<li><a href="#grids">Rasterarten</a></li>
+	<li><a href="#extras">Zusatzbereiche</a></li>
+	</ul>
 <li><a href="#difficulties">Schwierigkeitsgrade</a></li>
 <li><a href="#links">Externe Links</a></li>
 </ul>
@@ -28,7 +32,7 @@ ist ein <i>Bereich</i> dabei entweder eine Zeile, eine Spalte oder ein quadratis
 Im Menü <i>Neues Spiel</i> können Sie aus zwei Rasterarten und drei Arten von
 Zusatzbereichen wählen.</p>
 
-<h2>Rasterarten</h2>
+<h2 id="grids">Rasterarten</h2>
 
 <p>Die verfügbaren Rasterarten sind:</p>
 <dl>
@@ -40,7 +44,7 @@ Zusatzbereichen wählen.</p>
   die Ziffern von 1 bis 9 müssen in jedem dieser Bereiche genau einmal vorkommen.</dd>
 </dl>
 
-<h2>Zusatzbereiche</h2>
+<h2 id="extras">Zusatzbereiche</h2>
 
 <p>Durch Zusatzbereiche werden einem Sudoku-Rätsel zusätzliche Einschränkungen
 auferlegt. Es gibt drei Arten von Zusatzbereichen:</p>
