--- a/Andoku/assets/help.html
+++ b/Andoku/assets/help.html
@@ -10,6 +10,10 @@
 <ul>
 <li><a href="#objective">Objective</a></li>
 <li><a href="#variants">Game Variants</a></li>
+	<ul>
+	<li><a href="#grids">Grid Styles</a></li>
+	<li><a href="#extras">Extra Regions</a></li>
+	</ul>
 <li><a href="#difficulties">Difficulty Levels</a></li>
 <li><a href="#links">External Links</a></li>
 </ul>
@@ -26,7 +30,7 @@ row, a column or one of the nine square 3x3 block.</p>
 In the <i>New Game</i> menu you can choose from two grid styles and three kinds
 of extra regions.</p>
 
-<h2>Grid Styles</h2>
+<h2 id="grids">Grid Styles</h2>
 
 <p>The available grid styles are:</p>
 <dl>
@@ -38,7 +42,7 @@ of extra regions.</p>
   region.</dd>
 </dl>
 
-<h2>Extra Regions</h2>
+<h2 id="extras">Extra Regions</h2>
 
 <p>Extra regions impose additional constraints on the puzzle. There are three
 kinds of extra regions:</p>
