help on input methods
git-svn-id: http://andoku.googlecode.com/svn/trunk@289 8b5035ae-46ba-11de-80ae-c1ff141340a0

--- a/Andoku/assets/help-de.html
+++ b/Andoku/assets/help-de.html
@@ -16,6 +16,12 @@
 	<li><a href="#extras">Zusatzbereiche</a></li>
 	</ul>
 <li><a href="#difficulties">Schwierigkeitsgrade</a></li>
+<li><a href="#inputmethods">Eingabemethoden</a></li>
+	<ul>
+	<li><a href="#im_ctv">Feld dann Werte</a></li>
+	<li><a href="#im_vtc">Werte dann Feld</a></li>
+	<li><a href="#im_auto">Automatisch</a></li>
+	</ul>
 <li><a href="#links">Externe Links</a></li>
 </ul>
 
@@ -75,6 +81,81 @@ Sudoku-Rätsel beinhalten, als sie üblicherweise in Tageszeitungen abgedruckt s
 
 <p>Mit acht verschiedenen Spielvarianten, fünf Schwierigkeitsgraden und jeweils
 100 Rätseln hat Andoku in Summe 4000 verschiedene Sudoku-Rätsel. </p>
+
+<h1 id="inputmethods">Eingabemethoden</h1>
+
+<p>Andoku bietet drei verschiedene Eingabemethoden, um während eines
+Spiels Ziffern in Felder des Sudoku-Rätsels eingeben zu können. Unter
+Einstellungen kann zwischen diesen Methoden ausgewählt werden.</p>
+
+<h2 id="im_ctv">Feld dann Werte</h2>
+
+<p>Bei dieser Eingabemethode wird zuerst das Feld mit dem Finger
+angetippt und anschließend können über den Ziffernblock ein oder mehrere
+mögliche Werte für dieses Feld eingegeben werden. Das aktuell
+ausgewählte Feld wird dabei am Spielfeld farbig hinterlegt.</p>
+
+<p>Mit der Taste <tt>C</tt> werden die Werte des aktuellen Feldes gelöscht.</p>
+
+<p>Die Taste <tt>Inv</tt> dient dazu, die Werte des aktuellen Feldes
+umzukehren. Damit kann recht schnell festgelegt werden, dass bestimmte
+Ziffern <i>nicht</i> möglich sind. Zum Beispiel führt die Eingabe <tt>3</tt>,
+<tt>7</tt>, <tt>Inv</tt> dazu, dass die Ziffern 1, 2, 4, 5, 6, 8 und 9
+ausgewählt werden (alle Ziffern bis auf 3 und 7).</p>
+
+<p>Bei Geräten mit einem Track-Ball kann dieser verwendet werden, um
+die Markierung auf eines der Nachbarfelder zu verschieben.</p>
+
+<h2 id="im_vtc">Werte dann Feld</h2>
+
+<p>Diese Eingabemethode funktioniert genau umgekehrt. Hierbei werden
+zuerst am Ziffernblock ein oder mehrere Werte ausgewählt. Erst danach
+wird auf ein Feld getippt, um ihm diese Werte zuzuweisen.</p>
+
+<p>Mit dieser Eingabemethode kann man viel Tipparbeit sparen, weil
+es so möglich ist, den gleichen Wert oder die gleichen möglichen Werte
+schnell mehreren Feldern hintereinander zuzuweisen indem man die Felder
+nach der Reihe antippt.</p>
+
+<p>Interessant ist das Verhalten dieser Methode, wenn man ein
+Feld antippt, das nicht leer ist. Dabei hängt das Ergebnis davon ab, ob
+das Feld bereits einen der ausgewählten Werte hat oder nicht. Hat das
+Feld keinen der Werte, dann werden die Werte hinzugefügt (gleiches
+Verhalten wie bei leerem Feld). Wenn jedoch einer der ausgewählten Werte
+bereits im Feld vorhanden ist, werden statt dessen die ausgewählten
+Werte im Feld gelöscht.</p>
+
+<p>Beispiel: Feldwert <tt>3</tt>, Ziffernblock <tt>5</tt>, <tt>7</tt>
+ergibt 3, 5 und 7.</p>
+
+<p>Beispiel: Feldwert <tt>3</tt>, <tt>5</tt>, <tt>7</tt>,
+Ziffernblock <tt>3</tt>, <tt>5</tt> ergibt 7.</p>
+
+<p>Beispiel: Feldwert <tt>3</tt>, <tt>5</tt>, Ziffernblock <tt>5</tt>,
+<tt>8</tt> ergibt 3. D.h. 5 wird gelöscht, aber 8 wird <i>nicht</i>
+gesetzt.</p>
+
+<p>Die Taste <tt>C</tt> dient dazu, aller Werte auf der Tastatur zu
+löschen. Mit der Taste <tt>Inv</tt> werden die ausgewählten Werte auf
+der Tastatur umgekehrt.</p>
+
+<h2 id="im_auto">Automatisch</h2>
+
+<p>Bei dieser Eingabemethode kann recht einfach zwischen <i>Feld
+dann Werte</i> und <i>Werte dann Feld</i> gewechselt werden.</p>
+
+<p>Das bedeutet, dass beide Eingabearten möglich sind. Tippt der
+Benutzer zuerst auf ein Feld wird automatisch <i>Feld dann Werte</i>
+verwendet. Tippt der Benutzer hingegen zuerst auf Ziffern des
+Ziffernblocks wird <i>Werte dann Feld</i> verwendet.</p>
+
+<p>Von <i>Feld dann Werte</i> gelangt man wieder in die neutrale
+Ausgangssituation zurück indem man nochmals auf das ausgewählte Feld
+tippt.</p>
+
+<p>Von <i>Werte dann Feld</i> gelangt man in die neutrale
+Ausgangssituation indem man alle Ziffern auf dem Ziffernblock löscht, am
+einfachsten also mit der Taste <tt>C</tt>.</p>
 
 <h1 id="links">Externe Links</h1>
 
