--- a/Andoku/assets/help.html
+++ b/Andoku/assets/help.html
@@ -15,6 +15,12 @@
 	<li><a href="#extras">Extra Regions</a></li>
 	</ul>
 <li><a href="#difficulties">Difficulty Levels</a></li>
+<li><a href="#inputmethods">Input Methods</a></li>
+	<ul>
+	<li><a href="#im_ctv">Cell Then Values</a></li>
+	<li><a href="#im_vtc">Values Then Cell</a></li>
+	<li><a href="#im_auto">Automatic</a></li>
+	</ul>
 <li><a href="#links">External Links</a></li>
 </ul>
 
@@ -72,6 +78,79 @@ than what can be found in newspapers.</p>
 
 <p>With eight different game types, five difficulty levels and 100 puzzles per type and
 difficulty Andoku offers a total of 4000 puzzles.</p>
+
+<h1 id="inputmethods">Input Methods</h1>
+
+<p>Andoku offers three different input methods for entering digits
+into the cells of a puzzle while playing. Go to Settings to choose
+between the available input methods.</p>
+
+<h2 id="im_ctv">Cell Then Values</h2>
+
+<p>With this input method you first select a cell by tapping on it
+with your finger and then you use the numeric pad at the bottom to enter
+one or more possible values for that cell. The currently selected cell
+will be highlighted with a background color.</p>
+
+<p>Press the button <tt>C</tt> to clear the values of the currently
+selected cell.</p>
+
+<p>The button <tt>Inv</tt> is used to reverse the values of the
+current cell. This makes it possible to easily specify that certain
+values are <i>not</i> possible at a certain cell. For example if you
+enter <tt>3</tt>, <tt>7</tt>, <tt>Inv</tt> the result will be 1, 2, 4,
+5, 6, 8 and 9 (all digits except 3 and 7).</p>
+
+<p>If the device has a track ball it can be used move the selection
+to one of the neighbor fields.</p>
+
+<h2 id="im_vtc">Values Then Cell</h2>
+
+<p>This input method works the opposite way around. First you select
+one or more values using the numeric pad at the bottom. Only then do you tap
+on a cell to assign these values to it.</p>
+
+<p>This input method can save a lot of work because it is possible
+to assign multiple fields to the same value or values by tapping on the
+cells one after the other.</p>
+
+<p>But what happens when you tap on a cell that is not empty? The
+result depends on whether the cell already contained one of the selected
+values or not. If the cell did not already contain one of the selected
+values the values are simply added (same behavior as if the cell would
+have been empty). If, on the other hand, the cell already contained one
+of the selected values then all of the selected values will be reset
+instead.</p>
+
+<p>Example: cell values <tt>3</tt>, numeric pad <tt>5</tt>, <tt>7</tt>
+results in 3, 5 and 7.</p>
+
+<p>Example: cell values <tt>3</tt>, <tt>5</tt>, <tt>7</tt>,
+numeric pad <tt>3</tt>, <tt>5</tt> results in 7.</p>
+
+<p>Example: cell values <tt>3</tt>, <tt>5</tt>, numeric pad <tt>5</tt>,
+<tt>8</tt> results in 3. I.e. 5 is cleared, but 8 is <i>not</i> set.</p>
+
+<p>The button <tt>C</tt> is used to clear all values on the number
+pad. The button <i>Inv</i> is used to reverse the values on the number
+pad.</p>
+
+<h2 id="im_auto">Automatic</h2>
+
+<p>Use this input method if you want to easily switch back and forth
+between <i>Cell Then Values</i> and <i>Values Then Cell</i>.</p>
+
+<p>This means that both input methods are possible. If you tap on a
+cell first then <i>Cell Then Values</i> will be used automatically. If
+you tap on a digit of the numeric pad first then <i>Values Then Cell</i>
+will be used instead.</p>
+
+<p>If you want to get back to the neutral state from <i>Cell
+Then Values</i> you have to tap on the selected cell a second time.</p>
+
+<p>To get back from <i>Values Then Cell</i> you have to clear all
+values on the numeric pad. The simplest way to do this is by pressing
+the button <tt>C</tt>.</p>
 
 <h1 id="links">External Links</h1>
 
