Eclipse code formatter
git-svn-id: http://andoku.googlecode.com/svn/trunk@290 8b5035ae-46ba-11de-80ae-c1ff141340a0

--- a/Andoku/assets/about-de.html
+++ b/Andoku/assets/about-de.html
@@ -2,7 +2,8 @@
 <html>
 <head>
 <title>Über Andoku</title>
-<link rel="stylesheet" type="text/css" href="file:///android_asset/andoku.css">
+<link rel="stylesheet" type="text/css"
+	href="file:///android_asset/andoku.css">
 </head>
 <body>
 
@@ -10,11 +11,12 @@
 
 <p>Version 1.1.2</p>
 
-<p>Copyright &#x00a9; 2009, 2010  Markus Wiederkehr.</p>
+<p>Copyright &#x00a9; 2009, 2010 Markus Wiederkehr.</p>
 
-<p>Für dieses Programm besteht KEINERLEI GARANTIE. Dies ist freie Software, die Sie unter 
-bestimmten Bedingungen weitergeben dürfen; für Details siehe die
-<a href="http://www.gnu.org/licenses/gpl.html">GNU General Public License v3</a>.</p>
+<p>Für dieses Programm besteht KEINERLEI GARANTIE. Dies ist freie
+Software, die Sie unter bestimmten Bedingungen weitergeben dürfen; für
+Details siehe die <a href="http://www.gnu.org/licenses/gpl.html">GNU
+General Public License v3</a>.</p>
 
 <p>Projekt-Homepage: <a href="http://code.google.com/p/andoku">http://code.google.com/p/andoku</a></p>
 
