--- a/Andoku/assets/about.html
+++ b/Andoku/assets/about.html
@@ -1,7 +1,9 @@
+<?xml version="1.0" encoding="utf-8"?>
 <html>
 <head>
 <title>About Andoku</title>
-<link rel="stylesheet" type="text/css" href="file:///android_asset/andoku.css">
+<link rel="stylesheet" type="text/css"
+	href="file:///android_asset/andoku.css">
 </head>
 <body>
 
@@ -9,11 +11,12 @@
 
 <p>version 1.1.2</p>
 
-<p>Copyright &#x00a9; 2009, 2010  Markus Wiederkehr.</p>
+<p>Copyright &#x00a9; 2009, 2010 Markus Wiederkehr.</p>
 
-<p>This program comes with ABSOLUTELY NO WARRANTY. This is free software, and you are
-welcome to redistribute it under certain conditions; see the
-<a href="http://www.gnu.org/licenses/gpl.html">GNU General Public License v3</a> for details.</p>
+<p>This program comes with ABSOLUTELY NO WARRANTY. This is free
+software, and you are welcome to redistribute it under certain
+conditions; see the <a href="http://www.gnu.org/licenses/gpl.html">GNU
+General Public License v3</a> for details.</p>
 
 <p>Project homepage: <a href="http://code.google.com/p/andoku">http://code.google.com/p/andoku</a></p>
 
