--- a/Andoku/assets/help-de.html
+++ b/Andoku/assets/help-de.html
@@ -2,85 +2,91 @@
 <html>
 <head>
 <title>Hilfe zu Andoku</title>
-<link rel="stylesheet" type="text/css" href="file:///android_asset/andoku.css">
+<link rel="stylesheet" type="text/css"
+	href="file:///android_asset/andoku.css">
 </head>
 <body>
 
 <h1>Inhaltsverzeichnis</h1>
 
 <ul>
-<li><a href="#objective">Ziel des Spiels</a></li>
-<li><a href="#variants">Spielvarianten</a></li>
+	<li><a href="#objective">Ziel des Spiels</a></li>
+	<li><a href="#variants">Spielvarianten</a></li>
 	<ul>
-	<li><a href="#grids">Rasterarten</a></li>
-	<li><a href="#extras">Zusatzbereiche</a></li>
+		<li><a href="#grids">Rasterarten</a></li>
+		<li><a href="#extras">Zusatzbereiche</a></li>
 	</ul>
-<li><a href="#difficulties">Schwierigkeitsgrade</a></li>
-<li><a href="#inputmethods">Eingabemethoden</a></li>
+	<li><a href="#difficulties">Schwierigkeitsgrade</a></li>
+	<li><a href="#inputmethods">Eingabemethoden</a></li>
 	<ul>
-	<li><a href="#im_ctv">Feld dann Werte</a></li>
-	<li><a href="#im_vtc">Werte dann Feld</a></li>
-	<li><a href="#im_auto">Automatisch</a></li>
+		<li><a href="#im_ctv">Feld dann Werte</a></li>
+		<li><a href="#im_vtc">Werte dann Feld</a></li>
+		<li><a href="#im_auto">Automatisch</a></li>
 	</ul>
-<li><a href="#links">Externe Links</a></li>
+	<li><a href="#links">Externe Links</a></li>
 </ul>
 
 <h1 id="objective">Ziel des Spiels</h1>
 
-<p>Das Ziel des Spiels ist es, ein Raster so mit den Ziffern von 1 bis 9 zu befüllen, dass
-jede Ziffer exakt einmal in jedem <i>Bereich</i> vorkommt. Im Falle eines Standard-Sudokus
-ist ein <i>Bereich</i> dabei entweder eine Zeile, eine Spalte oder ein quadratischer
-3x3-Block.</p>
+<p>Das Ziel des Spiels ist es, ein Raster so mit den Ziffern von 1
+bis 9 zu befüllen, dass jede Ziffer exakt einmal in jedem <i>Bereich</i>
+vorkommt. Im Falle eines Standard-Sudokus ist ein <i>Bereich</i> dabei
+entweder eine Zeile, eine Spalte oder ein quadratischer 3x3-Block.</p>
 
 <h1 id="variants">Spielvarianten</h1>
 
-<p>Andoku bietet neben der klassischen Version zusätzliche Sudoku-Varianten an. 
-Im Menü <i>Neues Spiel</i> können Sie aus zwei Rasterarten und drei Arten von
-Zusatzbereichen wählen.</p>
+<p>Andoku bietet neben der klassischen Version zusätzliche
+Sudoku-Varianten an. Im Menü <i>Neues Spiel</i> können Sie aus zwei
+Rasterarten und drei Arten von Zusatzbereichen wählen.</p>
 
 <h2 id="grids">Rasterarten</h2>
 
 <p>Die verfügbaren Rasterarten sind:</p>
 <dl>
-  <dt>Standard</dt>
-  <dd>Das Raster besteht aus quadratischen 3x3-Blöcken.</dd>
-  <dt>Squiggly (auch Jigsaw)</dt>
-  <dd>Anstelle von neun quadratischen Blöcken besteht das Raster aus neun Bereichen,
-  die nicht quadratisch sind. Diese Bereiche sind durch eine dicke Linie abgegrenzt und
-  die Ziffern von 1 bis 9 müssen in jedem dieser Bereiche genau einmal vorkommen.</dd>
+	<dt>Standard</dt>
+	<dd>Das Raster besteht aus quadratischen 3x3-Blöcken.</dd>
+	<dt>Squiggly (auch Jigsaw)</dt>
+	<dd>Anstelle von neun quadratischen Blöcken besteht das Raster aus
+	neun Bereichen, die nicht quadratisch sind. Diese Bereiche sind durch
+	eine dicke Linie abgegrenzt und die Ziffern von 1 bis 9 müssen in jedem
+	dieser Bereiche genau einmal vorkommen.</dd>
 </dl>
 
 <h2 id="extras">Zusatzbereiche</h2>
 
-<p>Durch Zusatzbereiche werden einem Sudoku-Rätsel zusätzliche Einschränkungen
-auferlegt. Es gibt drei Arten von Zusatzbereichen:</p>
+<p>Durch Zusatzbereiche werden einem Sudoku-Rätsel zusätzliche
+Einschränkungen auferlegt. Es gibt drei Arten von Zusatzbereichen:</p>
 <dl>
-  <dt>Keine</dt>
-  <dd>Sie müssen lediglich die Grundregeln für die 9 Zeilen, Spalten und
-  (quadratischen oder squiggly) Blöcke befolgen.</dd>
-  <dt>X-Sudoku</dt>
-  <dd>Die Ziffern von 1 bis 9 müssen in den beiden Diagonalen des Rasters genau
-  einmal vorkommen. Die Diagonalen sind mit einer hellblauen Farbe hinterlegt,
-  um das anzuzeigen.</dd>
-  <dt>Hyper-Sudoku</dt>
-  <dd>Das Sudoku hat vier Zusatzbereiche, die hellblau hinterlegt sind.
-  Zusätzlich zu den Zeilen, Spalten und Blöcken müssen die Ziffern von 1 bis 9
-  in jedem dieser Zusatzbereiche genau einmal auftreten.</dd>
-  <dt>Prozent-Sudoku</dt>
-  <dd>Das Sudoku hat drei Zusatzbereiche, die einem Prozent-Zeichen ähneln.</dd>
+	<dt>Keine</dt>
+	<dd>Sie müssen lediglich die Grundregeln für die 9 Zeilen, Spalten
+	und (quadratischen oder squiggly) Blöcke befolgen.</dd>
+	<dt>X-Sudoku</dt>
+	<dd>Die Ziffern von 1 bis 9 müssen in den beiden Diagonalen des
+	Rasters genau einmal vorkommen. Die Diagonalen sind mit einer
+	hellblauen Farbe hinterlegt, um das anzuzeigen.</dd>
+	<dt>Hyper-Sudoku</dt>
+	<dd>Das Sudoku hat vier Zusatzbereiche, die hellblau hinterlegt
+	sind. Zusätzlich zu den Zeilen, Spalten und Blöcken müssen die Ziffern
+	von 1 bis 9 in jedem dieser Zusatzbereiche genau einmal auftreten.</dd>
+	<dt>Prozent-Sudoku</dt>
+	<dd>Das Sudoku hat drei Zusatzbereiche, die einem Prozent-Zeichen
+	ähneln.</dd>
 </dl>
 
 <h1 id="difficulties">Schwierigkeitsgrade</h1>
 
-<p>Andoku bietet fünf Schwierigkeitsgrade pro Spielvariante. Die Schwierigkeit bewegt
-sich von <i>einfach</i> bis <i>teuflisch</i>. Squiggly-Sudokus oder Sudokus mit
-Zusatzbereich sind dabei generell schwieriger als Standard-Sudokus.</p>
+<p>Andoku bietet fünf Schwierigkeitsgrade pro Spielvariante. Die
+Schwierigkeit bewegt sich von <i>einfach</i> bis <i>teuflisch</i>.
+Squiggly-Sudokus oder Sudokus mit Zusatzbereich sind dabei generell
+schwieriger als Standard-Sudokus.</p>
 
-<p>Die Schwierigkeitsgrade <i>schwer</i> und <i>teuflisch</i> sollten schwierigere
-Sudoku-Rätsel beinhalten, als sie üblicherweise in Tageszeitungen abgedruckt sind.</p> 
+<p>Die Schwierigkeitsgrade <i>schwer</i> und <i>teuflisch</i>
+sollten schwierigere Sudoku-Rätsel beinhalten, als sie üblicherweise in
+Tageszeitungen abgedruckt sind.</p>
 
-<p>Mit acht verschiedenen Spielvarianten, fünf Schwierigkeitsgraden und jeweils
-100 Rätseln hat Andoku in Summe 4000 verschiedene Sudoku-Rätsel. </p>
+<p>Mit acht verschiedenen Spielvarianten, fünf Schwierigkeitsgraden
+und jeweils 100 Rätseln hat Andoku in Summe 4000 verschiedene
+Sudoku-Rätsel.</p>
 
 <h1 id="inputmethods">Eingabemethoden</h1>
 
@@ -95,7 +101,8 @@ angetippt und anschließend können über den Ziffernblock ein oder mehrere
 mögliche Werte für dieses Feld eingegeben werden. Das aktuell
 ausgewählte Feld wird dabei am Spielfeld farbig hinterlegt.</p>
 
-<p>Mit der Taste <tt>C</tt> werden die Werte des aktuellen Feldes gelöscht.</p>
+<p>Mit der Taste <tt>C</tt> werden die Werte des aktuellen Feldes
+gelöscht.</p>
 
 <p>Die Taste <tt>Inv</tt> dient dazu, die Werte des aktuellen Feldes
 umzukehren. Damit kann recht schnell festgelegt werden, dass bestimmte
@@ -117,13 +124,13 @@ es so möglich ist, den gleichen Wert oder die gleichen möglichen Werte
 schnell mehreren Feldern hintereinander zuzuweisen indem man die Felder
 nach der Reihe antippt.</p>
 
-<p>Interessant ist das Verhalten dieser Methode, wenn man ein
-Feld antippt, das nicht leer ist. Dabei hängt das Ergebnis davon ab, ob
-das Feld bereits einen der ausgewählten Werte hat oder nicht. Hat das
-Feld keinen der Werte, dann werden die Werte hinzugefügt (gleiches
-Verhalten wie bei leerem Feld). Wenn jedoch einer der ausgewählten Werte
-bereits im Feld vorhanden ist, werden statt dessen die ausgewählten
-Werte im Feld gelöscht.</p>
+<p>Interessant ist das Verhalten dieser Methode, wenn man ein Feld
+antippt, das nicht leer ist. Dabei hängt das Ergebnis davon ab, ob das
+Feld bereits einen der ausgewählten Werte hat oder nicht. Hat das Feld
+keinen der Werte, dann werden die Werte hinzugefügt (gleiches Verhalten
+wie bei leerem Feld). Wenn jedoch einer der ausgewählten Werte bereits
+im Feld vorhanden ist, werden statt dessen die ausgewählten Werte im
+Feld gelöscht.</p>
 
 <p>Beispiel: Feldwert <tt>3</tt>, Ziffernblock <tt>5</tt>, <tt>7</tt>
 ergibt 3, 5 und 7.</p>
@@ -159,11 +166,12 @@ einfachsten also mit der Taste <tt>C</tt>.</p>
 
 <h1 id="links">Externe Links</h1>
 
-<p>Andoku ist ein Open-Source-Projekt. Die Homepage des Projekts wird von
-<a href="http://code.google.com/p/andoku">Google Code</a> gehostet.</p>
+<p>Andoku ist ein Open-Source-Projekt. Die Homepage des Projekts
+wird von <a href="http://code.google.com/p/andoku">Google Code</a>
+gehostet.</p>
 
-<p>Für mehr Informationen zu Sudoku-Rätseln im Allgemeinen siehe
-<a href="http://de.m.wikipedia.org/wiki/Sudoku">Wikipedia: Sudoku</a>.</p>
+<p>Für mehr Informationen zu Sudoku-Rätseln im Allgemeinen siehe <a
+	href="http://de.m.wikipedia.org/wiki/Sudoku">Wikipedia: Sudoku</a>.</p>
 
 </body>
 </html>
