--- a/Andoku/assets/help.html
+++ b/Andoku/assets/help.html
@@ -1,83 +1,89 @@
+<?xml version="1.0" encoding="utf-8"?>
 <html>
 <head>
 <title>Help On Andoku</title>
-<link rel="stylesheet" type="text/css" href="file:///android_asset/andoku.css">
+<link rel="stylesheet" type="text/css"
+	href="file:///android_asset/andoku.css">
 </head>
 <body>
 
 <h1>Table of Contents</h1>
 
 <ul>
-<li><a href="#objective">Objective</a></li>
-<li><a href="#variants">Game Variants</a></li>
+	<li><a href="#objective">Objective</a></li>
+	<li><a href="#variants">Game Variants</a></li>
 	<ul>
-	<li><a href="#grids">Grid Styles</a></li>
-	<li><a href="#extras">Extra Regions</a></li>
+		<li><a href="#grids">Grid Styles</a></li>
+		<li><a href="#extras">Extra Regions</a></li>
 	</ul>
-<li><a href="#difficulties">Difficulty Levels</a></li>
-<li><a href="#inputmethods">Input Methods</a></li>
+	<li><a href="#difficulties">Difficulty Levels</a></li>
+	<li><a href="#inputmethods">Input Methods</a></li>
 	<ul>
-	<li><a href="#im_ctv">Cell Then Values</a></li>
-	<li><a href="#im_vtc">Values Then Cell</a></li>
-	<li><a href="#im_auto">Automatic</a></li>
+		<li><a href="#im_ctv">Cell Then Values</a></li>
+		<li><a href="#im_vtc">Values Then Cell</a></li>
+		<li><a href="#im_auto">Automatic</a></li>
 	</ul>
-<li><a href="#links">External Links</a></li>
+	<li><a href="#links">External Links</a></li>
 </ul>
 
 <h1 id="objective">Objective</h1>
 
-<p>The objective of the game is to fill the entire game grid so that the digits from 1 to 9
-appear exactly once in each <i>region</i>. For a standard sudoku a <i>region</i> is either a
-row, a column or one of the nine square 3x3 block.</p>
+<p>The objective of the game is to fill the entire game grid so that
+the digits from 1 to 9 appear exactly once in each <i>region</i>. For a
+standard sudoku a <i>region</i> is either a row, a column or one of the
+nine square 3x3 block.</p>
 
 <h1 id="variants">Game Variants</h1>
 
-<p>Andoku offers additional sudoku variants besides the classical one.
-In the <i>New Game</i> menu you can choose from two grid styles and three kinds
-of extra regions.</p>
+<p>Andoku offers additional sudoku variants besides the classical
+one. In the <i>New Game</i> menu you can choose from two grid styles and
+three kinds of extra regions.</p>
 
 <h2 id="grids">Grid Styles</h2>
 
 <p>The available grid styles are:</p>
 <dl>
-  <dt>Standard</dt>
-  <dd>The grid is made up of square 3x3 blocks.</dd>
-  <dt>Squiggly (a.k.a. jigsaw)</dt>
-  <dd>Instead of 9 square blocks the game grid consists of 9 non-square regions. The regions
-  are outlined with a thick line and the digits 1 to 9 have to appear exactly once in each
-  region.</dd>
+	<dt>Standard</dt>
+	<dd>The grid is made up of square 3x3 blocks.</dd>
+	<dt>Squiggly (a.k.a. jigsaw)</dt>
+	<dd>Instead of 9 square blocks the game grid consists of 9
+	non-square regions. The regions are outlined with a thick line and the
+	digits 1 to 9 have to appear exactly once in each region.</dd>
 </dl>
 
 <h2 id="extras">Extra Regions</h2>
 
-<p>Extra regions impose additional constraints on the puzzle. There are three
-kinds of extra regions:</p>
+<p>Extra regions impose additional constraints on the puzzle. There
+are three kinds of extra regions:</p>
 <dl>
-  <dt>None</dt>
-  <dd>No extra regions. You only have to deal with 9 rows, nine columns and 9 (square or
-  squiggly) blocks.</dd>
-  <dt>X-Sudoku</dt>
-  <dd>The digits 1 to 9 also have to appear exactly once in the two diagonals of the puzzle.
-  To indicate this the diagonals have a light blue background color.</dd>
-  <dt>Hyper-Sudoku</dt>
-  <dd>The sudoku has four additional regions drawn in a light blue background color.
-  In addition to rows, columns and blocks the digits 1 to 9 have to appear exactly
-  once in each of these extra regions.</dd>
-  <dt>Percent-Sudoku</dt>
-  <dd>The sudoku has three additional regions that resemble a percent sign.</dd>
+	<dt>None</dt>
+	<dd>No extra regions. You only have to deal with 9 rows, nine
+	columns and 9 (square or squiggly) blocks.</dd>
+	<dt>X-Sudoku</dt>
+	<dd>The digits 1 to 9 also have to appear exactly once in the two
+	diagonals of the puzzle. To indicate this the diagonals have a light
+	blue background color.</dd>
+	<dt>Hyper-Sudoku</dt>
+	<dd>The sudoku has four additional regions drawn in a light blue
+	background color. In addition to rows, columns and blocks the digits 1
+	to 9 have to appear exactly once in each of these extra regions.</dd>
+	<dt>Percent-Sudoku</dt>
+	<dd>The sudoku has three additional regions that resemble a
+	percent sign.</dd>
 </dl>
 
 <h1 id="difficulties">Difficulty Levels</h1>
 
-<p>Andoku offers five difficulty levels per game type. The difficulties range from
-<i>Easy</i> to <i>Fiendish</i>. Squiggly sudokus or sudokus with extra regions
-are generally more difficult than standard sudokus.</p>
+<p>Andoku offers five difficulty levels per game type. The
+difficulties range from <i>Easy</i> to <i>Fiendish</i>. Squiggly sudokus
+or sudokus with extra regions are generally more difficult than standard
+sudokus.</p>
 
-<p>The difficulty levels <i>Hard</i> and <i>Fiendish</i> should contain harder puzzles
-than what can be found in newspapers.</p> 
+<p>The difficulty levels <i>Hard</i> and <i>Fiendish</i> should
+contain harder puzzles than what can be found in newspapers.</p>
 
-<p>With eight different game types, five difficulty levels and 100 puzzles per type and
-difficulty Andoku offers a total of 4000 puzzles.</p>
+<p>With eight different game types, five difficulty levels and 100
+puzzles per type and difficulty Andoku offers a total of 4000 puzzles.</p>
 
 <h1 id="inputmethods">Input Methods</h1>
 
@@ -107,8 +113,8 @@ to one of the neighbor fields.</p>
 <h2 id="im_vtc">Values Then Cell</h2>
 
 <p>This input method works the opposite way around. First you select
-one or more values using the numeric pad at the bottom. Only then do you tap
-on a cell to assign these values to it.</p>
+one or more values using the numeric pad at the bottom. Only then do you
+tap on a cell to assign these values to it.</p>
 
 <p>This input method can save a lot of work because it is possible
 to assign multiple fields to the same value or values by tapping on the
@@ -125,8 +131,8 @@ instead.</p>
 <p>Example: cell values <tt>3</tt>, numeric pad <tt>5</tt>, <tt>7</tt>
 results in 3, 5 and 7.</p>
 
-<p>Example: cell values <tt>3</tt>, <tt>5</tt>, <tt>7</tt>,
-numeric pad <tt>3</tt>, <tt>5</tt> results in 7.</p>
+<p>Example: cell values <tt>3</tt>, <tt>5</tt>, <tt>7</tt>, numeric
+pad <tt>3</tt>, <tt>5</tt> results in 7.</p>
 
 <p>Example: cell values <tt>3</tt>, <tt>5</tt>, numeric pad <tt>5</tt>,
 <tt>8</tt> results in 3. I.e. 5 is cleared, but 8 is <i>not</i> set.</p>
@@ -154,11 +160,11 @@ the button <tt>C</tt>.</p>
 
 <h1 id="links">External Links</h1>
 
-<p>Andoku is an open source project. The project's home page is hosted at
-<a href="http://code.google.com/p/andoku">Google Code</a>.</p>
+<p>Andoku is an open source project. The project's home page is
+hosted at <a href="http://code.google.com/p/andoku">Google Code</a>.</p>
 
-<p>For more information on Sudoku puzzles in general see
-<a href="http://en.m.wikipedia.org/wiki/Sudoku">Wikipedia: Sudoku</a>.</p>
+<p>For more information on Sudoku puzzles in general see <a
+	href="http://en.m.wikipedia.org/wiki/Sudoku">Wikipedia: Sudoku</a>.</p>
 
 </body>
 </html>
