--- a/Andoku/assets/help.html
+++ b/Andoku/assets/help.html
@@ -31,7 +31,7 @@
 <p>The objective of the game is to fill the entire game grid so that
 the digits from 1 to 9 appear exactly once in each <i>region</i>. For a
 standard sudoku a <i>region</i> is either a row, a column or one of the
-nine square 3x3 block.</p>
+nine square 3x3 blocks.</p>
 
 <h1 id="variants">Game Variants</h1>
 
