--- a/Andoku/assets/help-de.html
+++ b/Andoku/assets/help-de.html
@@ -37,7 +37,7 @@ entweder eine Zeile, eine Spalte oder ein quadratischer 3x3-Block.</p>
 
 <p>Andoku bietet neben der klassischen Version zusätzliche
 Sudoku-Varianten an. Im Menü <i>Neues Spiel</i> können Sie aus zwei
-Rasterarten und drei Arten von Zusatzbereichen wählen.</p>
+Rasterarten und vier Arten von Zusatzbereichen wählen.</p>
 
 <h2 id="grids">Rasterarten</h2>
 
@@ -55,7 +55,7 @@ Rasterarten und drei Arten von Zusatzbereichen wählen.</p>
 <h2 id="extras">Zusatzbereiche</h2>
 
 <p>Durch Zusatzbereiche werden einem Sudoku-Rätsel zusätzliche
-Einschränkungen auferlegt. Es gibt drei Arten von Zusatzbereichen:</p>
+Einschränkungen auferlegt. Es gibt vier Arten von Zusatzbereichen:</p>
 <dl>
 	<dt>Keine</dt>
 	<dd>Sie müssen lediglich die Grundregeln für die 9 Zeilen, Spalten
