--- a/Andoku/assets/help.html
+++ b/Andoku/assets/help.html
@@ -37,7 +37,7 @@ nine square 3x3 blocks.</p>
 
 <p>Andoku offers additional sudoku variants besides the classical
 one. In the <i>New Game</i> menu you can choose from two grid styles and
-three kinds of extra regions.</p>
+four kinds of extra regions.</p>
 
 <h2 id="grids">Grid Styles</h2>
 
@@ -54,11 +54,11 @@ three kinds of extra regions.</p>
 <h2 id="extras">Extra Regions</h2>
 
 <p>Extra regions impose additional constraints on the puzzle. There
-are three kinds of extra regions:</p>
+are four kinds of extra regions:</p>
 <dl>
 	<dt>None</dt>
-	<dd>No extra regions. You only have to deal with 9 rows, nine
-	columns and 9 (square or squiggly) blocks.</dd>
+	<dd>No extra regions. You only have to deal with nine rows,
+	columns and (square or squiggly) blocks.</dd>
 	<dt>X-Sudoku</dt>
 	<dd>The digits 1 to 9 also have to appear exactly once in the two
 	diagonals of the puzzle. To indicate this the diagonals have a light
@@ -94,9 +94,9 @@ between the available input methods.</p>
 <h2 id="im_ctv">Cell Then Values</h2>
 
 <p>With this input method you first select a cell by tapping on it
-with your finger and then you use the numeric pad at the bottom to enter
-one or more possible values for that cell. The currently selected cell
-will be highlighted with a background color.</p>
+with your finger and then you use the numeric pad at the bottom of the
+screen to enter one or more possible values for that cell. The currently
+selected cell will be highlighted with a background color.</p>
 
 <p>Press the button <tt>C</tt> to clear the values of the currently
 selected cell.</p>
@@ -113,8 +113,8 @@ to one of the neighbor fields.</p>
 <h2 id="im_vtc">Values Then Cell</h2>
 
 <p>This input method works the opposite way around. First you select
-one or more values using the numeric pad at the bottom. Only then do you
-tap on a cell to assign these values to it.</p>
+one or more values from the numeric pad at the bottom of the screen.
+Only then do you tap on a cell to assign these values to it.</p>
 
 <p>This input method can save a lot of work because it is possible
 to assign multiple fields to the same value or values by tapping on the
@@ -137,19 +137,19 @@ pad <tt>3</tt>, <tt>5</tt> results in 7.</p>
 <p>Example: cell values <tt>3</tt>, <tt>5</tt>, numeric pad <tt>5</tt>,
 <tt>8</tt> results in 3. I.e. 5 is cleared, but 8 is <i>not</i> set.</p>
 
-<p>The button <tt>C</tt> is used to clear all values on the number
-pad. The button <i>Inv</i> is used to reverse the values on the number
-pad.</p>
+<p>The button <tt>C</tt> is used to clear all values on the numeric
+pad. The button <tt>Inv</tt> is used to reverse the values on the
+numeric pad.</p>
 
 <h2 id="im_auto">Automatic</h2>
 
 <p>Use this input method if you want to easily switch back and forth
 between <i>Cell Then Values</i> and <i>Values Then Cell</i>.</p>
 
-<p>This means that both input methods are possible. If you tap on a
-cell first then <i>Cell Then Values</i> will be used automatically. If
-you tap on a digit of the numeric pad first then <i>Values Then Cell</i>
-will be used instead.</p>
+<p>This means that initially both input methods are possible. If you
+tap on a cell first then <i>Cell Then Values</i> will be used
+automatically. If you tap on a digit of the numeric pad first then <i>Values
+Then Cell</i> will be used instead.</p>
 
 <p>If you want to get back to the neutral state from <i>Cell
 Then Values</i> you have to tap on the selected cell a second time.</p>
