slightly less technical explanation (thanks Guillaume :)
git-svn-id: http://andoku.googlecode.com/svn/trunk@302 8b5035ae-46ba-11de-80ae-c1ff141340a0

--- a/Andoku/assets/help-de.html
+++ b/Andoku/assets/help-de.html
@@ -55,7 +55,8 @@ Rasterarten und vier Arten von Zusatzbereichen wählen.</p>
 <h2 id="extras">Zusatzbereiche</h2>
 
 <p>Durch Zusatzbereiche werden einem Sudoku-Rätsel zusätzliche
-Einschränkungen auferlegt. Es gibt vier Arten von Zusatzbereichen:</p>
+Einschränkungen auferlegt. Zusätzlich zur klassischen Variante gibt es
+drei Arten von Zusatzbereichen:</p>
 <dl>
 	<dt>Keine</dt>
 	<dd>Sie müssen lediglich die Grundregeln für die 9 Zeilen, Spalten
