--- a/Andoku/assets/help.html
+++ b/Andoku/assets/help.html
@@ -53,12 +53,12 @@ four kinds of extra regions.</p>
 
 <h2 id="extras">Extra Regions</h2>
 
-<p>Extra regions impose additional constraints on the puzzle. There
-are four kinds of extra regions:</p>
+<p>Extra regions impose additional constraints on the puzzle. Aside
+from the classic version there are three kinds of extra regions:</p>
 <dl>
 	<dt>None</dt>
-	<dd>No extra regions. You only have to deal with nine rows,
-	columns and (square or squiggly) blocks.</dd>
+	<dd>You only have to deal with nine rows, columns and (square or
+	squiggly) blocks.</dd>
 	<dt>X-Sudoku</dt>
 	<dd>The digits 1 to 9 also have to appear exactly once in the two
 	diagonals of the puzzle. To indicate this the diagonals have a light
